--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,13 @@ group 'xyz.oribuin'
 version '1.0'
 compileJava.options.encoding = 'UTF-8'
 
+targetCompatibility = 1.8
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+//     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://repo.codemc.org/repository/maven-public' }
     maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
