--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,14 @@ repositories {
 //     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://repo.codemc.org/repository/maven-public' }
     maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    maven { url 'https://maven.enginehub.org/repo/' }
 }
 
 dependencies {
     shadow 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.5'
-    implementation 'dev.esophose:guiframework:1.0.1';
+    implementation 'dev.esophose:guiframework:1.0.1'
+    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
 
 }
 
