--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ author: Oribuin
 api-version: "1.13"
 description: Skyblock plugin designed and created by Oribuin
 website: https://oribuin.xyz/
-depend:
+softdepend:
   - PlaceholderAPI
 loadbefore:
   - Multiverse-Core
