--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-//     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://repo.codemc.org/repository/maven-public' }
     maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
     maven { url 'https://maven.enginehub.org/repo/' }
@@ -24,7 +23,7 @@ repositories {
 dependencies {
     shadow 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.5'
-    implementation 'dev.esophose:guiframework:1.0.1'
+    implementation 'dev.esophose:guiframework:1.1.0'
     compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
 
 }
@@ -32,8 +31,7 @@ dependencies {
 shadowJar {
     mergeServiceFiles()
     minimize()
-    exclude 'META-INF/*.DSA'
-    exclude 'META-INF/*.RSA'
+    relocate('dev.esophose.guiframework', 'xyz.oribuin.skyblock.libs.guiframework')
     archiveName 'Skyblock-' + project.property("version") + ".jar"
 }
 
