--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,6 @@
+#
+# Skyblock plugin by Oribuin
+#
+# https://github.com/Oribuin/Skyblock/
 
-island-settings:
-  sea-level: 0
-  limits:
-    monster: 100
-    ambient: 100
-    animal: 100
-    water: 100
+messages-enabled: true
