--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,6 +1,7 @@
-#
-# Configure all the in-game messages here.
-#
 
-invalid-permission: '&cYou do not have permission to do this.'
+# Misc
+reload: '&bYou have reloaded Skyblock &9(&7%version%&9)'
 player-only: '&cOnly a player can execute this command.'
+
+# Error Messages
+invalid-permission: '&cYou do not have permission to do this.'
