--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: xyz.oribuin.skyblock.Skyblock
 version: @version@
 author: Oribuin
 api-version: "1.13"
-description: Skyblock plugin designed and created by Oribuin
+description: All skyblock plugins suck so i made my own kekW
 website: https://oribuin.xyz/
 softdepend:
   - PlaceholderAPI
