--- a/build.gradle
+++ b/build.gradle
@@ -3,33 +3,48 @@ import org.apache.tools.ant.filters.ReplaceTokens
 plugins {
     id 'java'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
 group 'xyz.oribuin'
 version '1.0'
 compileJava.options.encoding = 'UTF-8'
 
-targetCompatibility = 1.8
-sourceCompatibility = 1.8
+targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    jcenter()
+
+    // Spigot
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url 'https://repo.codemc.org/repository/maven-public' }
+    // PlaceholderAPI
     maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
+    // Worldedit
     maven { url 'https://maven.enginehub.org/repo/' }
+    // Vault
+    maven { url = 'https://jitpack.io' }
 }
 
 dependencies {
-    
-    shadow 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
-    compileOnly 'me.clip:placeholderapi:2.10.6'
+    // Overlord language
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+
+    // Spigot Stuff
+    shadow 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
+    shadow 'me.clip:placeholderapi:2.10.9'
     implementation 'dev.esophose:guiframework:1.1.0'
+
+    // Plugin Hooks
     compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
-    
-    // Implement SQLite
+    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
 
-
+    // Databse Stuff
+    compileOnly 'com.zaxxer:HikariCP:3.4.5'
 }
 
 shadowJar {
