--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,7 +1,16 @@
+# Default Prefix
+prefix: '<rainbow:0.7>Skyblock&f » '
 
-# Misc
-reload: '&bYou have reloaded Skyblock &9(&7%version%&9)'
+# Command Messages
+commands:
+  created-island: '&bYou have successfully created the Island %island_name%.'
+
+# » Misc Messages «
+reload: '&bYou have reloaded Skyblock (&f%version%&b)'
+invalid-permission: '&cYou do not have permission for this command.'
+invalid-player: '&cThat is not a valid player.'
+invalid-arguments: '&cPlease include valid arguments.'
 player-only: '&cOnly a player can execute this command.'
-
-# Error Messages
-invalid-permission: '&cYou do not have permission to do this.'
+unkown-command: '&cAn unknown command was entered.'
+player-has-island: '&b%player% already has an Island.'
+you-have-island: '&bYou already have an Island.'
