--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ repositories {
 dependencies {
     // Overlord language
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
 
     // Spigot Stuff
     shadow 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
