--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,14 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '5.1.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
+    id 'me.bristermitten.pdm' version "0.0.20"
 }
+
 
 group 'xyz.oribuin'
 version '1.0'
 compileJava.options.encoding = 'UTF-8'
-
-targetCompatibility = JavaVersion.VERSION_1_8
-sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
@@ -31,26 +29,20 @@ repositories {
 
 dependencies {
     // Overlord language
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
+    pdm "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    pdm "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
 
     // Spigot Stuff
-    shadow 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
-    shadow 'me.clip:placeholderapi:2.10.9'
-    implementation 'dev.esophose:guiframework:1.1.0'
+    compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
+    compileOnly 'me.clip:placeholderapi:2.10.9'
+    pdm 'dev.esophose:guiframework:1.1.0'
 
     // Plugin Hooks
     compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
 
     // Databse Stuff
-    compileOnly 'com.zaxxer:HikariCP:3.4.5'
-}
-
-shadowJar {
-    mergeServiceFiles()
-    relocate('dev.esophose.guiframework', 'xyz.oribuin.skyblock.libs.guiframework')
-    archiveName 'Skyblock-' + project.property("version") + ".jar"
+    pdm 'com.zaxxer:HikariCP:3.4.5'
 }
 
 processResources {
@@ -59,3 +51,11 @@ processResources {
         filter ReplaceTokens, tokens: ["version": project.property("version")]
     }
 }
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+jar.dependsOn project.tasks.getByName('pdm')
