--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,10 @@ dependencies {
     // Spigot Stuff
     compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.9'
+
+    // Frameworks
     pdm 'dev.esophose:guiframework:1.1.0'
+    compileOnly 'me.mattstudios.utils:matt-framework:1.3'
 
     // Plugin Hooks
     compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
