--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,7 @@ softdepend:
   - PlaceholderAPI
 loadbefore:
   - Multiverse-Core
+commands:
+  island:
+    description: Main Island Command
+    usage: /island help
