--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,9 @@ repositories {
     // Spigot
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url 'https://repo.codemc.org/repository/maven-public' }
-    // PlaceholderAPI
+    maven { url = 'https://repo.rosewooddev.io/repository/public/' }
     maven { url 'http://repo.extendedclip.com/content/repositories/placeholderapi/' }
-    // Worldedit
     maven { url 'https://maven.enginehub.org/repo/' }
-    // Vault
     maven { url = 'https://jitpack.io' }
 }
 
@@ -33,18 +31,19 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.0"
 
     // Spigot Stuff
-    shadow 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
-    shadow 'me.clip:placeholderapi:2.10.9'
+    shadow 'org.spigotmc:spigot:1.16.2'
+    compileOnly 'me.clip:placeholderapi:2.10.9'
 
     // Frameworks
     implementation 'dev.esophose:guiframework:1.1.0'
 
     // Plugin Hooks
-    shadow 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
-    shadow 'com.github.MilkBowl:VaultAPI:1.7'
+    compileOnly 'com.sk89q.worldedit:worldedit-bukkit:7.1.0-SNAPSHOT'
+    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
 
-    // Database Stuff
+    // Misc
     implementation 'com.zaxxer:HikariCP:3.4.5'
+    implementation 'de.tr7zw:item-nbt-api:2.5.0'
 }
 
 processResources {
@@ -61,8 +60,8 @@ compileKotlin {
 }
 
 shadowJar {
-    mergeServiceFiles()
+    relocate('kotlin', 'net.arsentic.core.libs.kotlin')
+    relocate('dev.rosewood.guiframework', 'net.arsentic.core.libs.guiframework')
+    relocate ('de.tr7zw', 'net.arsentic.core.libs.nbtapi')
     archiveFileName = 'Skyblock-' + project.property("version") + '.jar'
-    relocate('dev.rosewood.guiframework', 'xyz.oribuin.skyblock.libs.guiframework')
-    relocate('org.jetbrains.kotlin', 'xyz.oribuin.skyblock.libs.kotlin')
 }
