--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
-    id 'me.bristermitten.pdm' version '0.0.25'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
+    id 'me.bristermitten.pdm' version '0.0.29'
 }
 
 
@@ -12,6 +12,8 @@ version '1.0'
 compileJava.options.encoding = 'UTF-8'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 repositories {
     mavenCentral()
     mavenLocal()
@@ -29,7 +31,7 @@ repositories {
 dependencies {
     // Overlord language
     pdm "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    pdm "org.jetbrains.kotlin:kotlin-reflect:1.4.0"
+    pdm "org.jetbrains.kotlin:kotlin-reflect:1.4.10"
 
     // Spigot Stuff
     compileOnly 'org.spigotmc:spigot:1.16.2'
