--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,18 @@
 rootProject.name = 'Skyblock'
 
+include(':Plugin')
+project(':Plugin').projectDir = file('Plugin')
+
+include(':NMS-Wrapper')
+project(':NMS-Wrapper').projectDir = file('NMS/Wrapper')
+
+include(':NMS-v1_16_R1')
+project(':NMS-v1_16_R1').projectDir = file('NMS/v1_16_R1')
+
+include(':NMS-v1_16_R2')
+project(':NMS-v1_16_R2').projectDir = file('NMS/v1_16_R2')
+
+include(':NMS-v1_16_R3')
+project(':NMS-v1_16_R3').projectDir = file('NMS/v1_16_R3')
+
+
