--- a/Plugin/build.gradle
+++ b/Plugin/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.10.9'
     compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
 
-    implementation fileTree(dir: 'implementation', includes: ['*.jar'])
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'me.mattstudios.utils:matt-framework-gui:2.0.2'
 }
